Update waybar and hypr config

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -48,7 +48,7 @@ tooltip {
   border-radius: 10px;
 }
 
-#custom-language,
+#hyprland-language,
 #custom-pacman,
 #custom-caffeine,
 #custom-weather,
